--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://m.facebook.com/flx/warn/?u=https%3A%2F%2F8fbcj86f.life%2F24197ndia493%3Futm_source%3Dfb%26utm_medium%3DFacebook_Mobile_Reels%26fbclid%3DIwZXh0bgNhZW0CMTEAAR0UFS3LPLuHOmZgHBhHhrwrivGjbHcrIsaPcv2W1tCeOu38zsS5GO6LoAc_aem_e8om14NNYPBIGriknfuruw&h=AT2nUBsaAtKwWjoaH0Qev2ZnhbS3f4_d1G1NpCPNbNNk2CQCDcmgZhg90BO-8YV9_9HI8ZX4vquoC9wIVwwPivcJs2S6-PuqrxR8EfPzBHUFbR82tb5nB76QtJwIXxSLMSVnW7PaUKYgH3RlEl4NhnIcrXoQn_VE2g">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
