--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://kui.g9kit.site/m/659598190351283.html?utm_medium=paid&utm_source=ig&utm_id=120220084492020597&utm_content=120220089215950597&utm_term=120220089215450597&utm_campaign=120220084492020597&fbclid=PAY2xjawJdk-lleHRuA2FlbQEwAGFkaWQBqxuI3HJz1QGnVqvKu8chcfJbhsGVzsJHA9q6pp5dx212xvYJHFLjGb1hG8PNWAwDSDYks-0_aem_L60UB7fYglmJ3QMKS6jYig&fbclid=PAZXh0bgNhZW0BMABhZGlkAasbiNxyc9UBp1aryrvHIXHyW4bBlc7CRwPauqaeXcdtdsb2CRxS4xm9YRvDzVgMA0g2JLPt_aem_L60UB7fYglmJ3QMKS6jYig">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
