--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://l.facebook.com/l.php?u=http%3A%2F%2Fpwcinvest.top%2Ffemale%3Futm_medium%3Dpaid%26utm_source%3Dfb%26utm_id%3D120220152852140501%26utm_content%3D120220152852320501%26utm_term%3D120220152852280501%26utm_campaign%3D120220152852140501%26fbclid%3DIwZXh0bgNhZW0CMTEAAR7QAiJhM1gEYOXvMAxoZ7z9duPlf2at7Z92oYg0hJ36Pxg8sKJkKp6cETWIWQ_aem_-exZ_mlceAC6yKr7YGXa8w&h=AT1tGTGilnQB6FqvQUZhCiWIFl_mnvDFpEHcah5xKrVxEL4x0FKOPwDwLYDlicR464XuxBF8MP_qHQPSpBt9HS_IukAO9TVWVQb2w2d8Qi-7KnJqbOIdx9pg62Q1GHg7TWn2dXUDLCmHIMuiaPnkIA&s=1&__wblt=1">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
