--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://lihi.cc/TSPOV?utm_medium=paid&utm_source=fb&utm_id=120219086637570095&utm_content=120219087541910095&utm_term=120219087542090095&utm_campaign=120219086637570095">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
