--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
+  <meta http-equiv="refresh" content="0;url=https://www.rocooc.xyz/?get=76B38&utm_medium=paid&utm_source=ig&utm_id=120219922635480083&utm_content=120219922635780083&utm_">
 </head>
 <body></body>
 </html>
