--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=http://rvcs.top/winter?utm_medium=paid&utm_source=ig&utm_id=120221112254360654&utm_content=120221112254350654&utm_term=120221112254400654&utm_campaign=120221112254360654&fbclid=PAY2xjawJxSidleHRuA2FlbQIxMAABp3CKgifIvJnj_BkgQIOzW0jioNOtM7TPLXYQGCktA_sghyyLo51EGu908LGD_aem_YEO0Bcp-4Eoyrd3sbu2tdQ">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1>
 </head>
 <body></body>
 </html>
