--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=http://rvcs.top/winter?utm_medium=paid&utm_source=fb&utm_id=120221112254360654&utm_content=120221112254420654&utm_term=120221112254340654&utm_campaign=120221112254360654">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
