--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://lihi.cc/Bmut4?utm_medium=paid&utm_source=fb&utm_id=120221700956020052&utm_content=120221804657710052&utm_term=120221804658090052&utm_campaign=120221700956020052">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
