--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://lihi.cc/rg802?utm_medium=paid&utm_source=fb&">
+  <meta http-equiv="refresh" content="0;url=https://www.jikssx.com/?get=SONG11">
 </head>
 <body></body>
 </html>
