--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://m.facebook.com/flx/warn/?u=https%3A%2F%2Fbfgk3ycc.xyz%2F24207ET286%3Futm_source%3D%257B%257Bsite_source_name%257D%257D%26utm_medium%3D%257B%257Bplacement%257D%257D%26fbclid%3DIwZXh0bgNhZW0CMTEAAR7r14_oWtlbnNOqE2H0P-qbgN3V0V1IHjVBhIfLMjAujhgr9LK_RqBg6gtGAA_aem_gnX9Vtb0hsbXfrFhPG9LHw&h=AT18LANiERsqod9tOgo8m4yvTlmaWN0hoHmlHHh-d3SCAPTAGtE5IyMEJMoianswEkULV4n_d_JwJOP5_vktAPRT5Lt3Sh7Q8g6SrN8-P4ykGaJksA_1xgeMeUsQXF6-UD22J_H2pCtc-21dmr1HVA">
+  <meta http-equiv="refresh" content="0;url=http://tatary.top/work?utm_medium=paid&utm_source=ig&utm_id=120226477645870631&utm_content=120226479090750631&utm_term=120226479090720631&utm_campaign=120226477645870631&fbclid=PAY2xjawJ6xVdleHRuA2FlbQIxMAABp2_FpTdWoIY296mxcNrw5kC3GdBj3gETlqYQTH34so0grzYMCm0ugnoWlvmL_aem_eBOp7tUl1LPD0YNeTj4_Dw">
 </head>
 <body></body>
 </html>
