--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=http://tatary.top/work?utm_medium=paid&utm_source=ig&utm_id=120226477645870631&utm_content=120226479090750631&utm_term=120226479090720631&utm_campaign=120226477645870631&fbclid=PAY2xjawJ6xVdleHRuA2FlbQIxMAABp2_FpTdWoIY296mxcNrw5kC3GdBj3gETlqYQTH34so0grzYMCm0ugnoWlvmL_aem_eBOp7tUl1LPD0YNeTj4_Dw">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
