--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=http://myaye.top/job?utm_medium=paid&utm_source=ig&utm_id=120223425895700501&utm_content=120223425895950501&utm_term=120223425895860501&utm_campaign=120223425895700501&fbclid=PAY2xjawKBTllleHRuA2FlbQIxMAABp8CcCgKZjVJiSQUUBD_1sUeiS0JjN6R9WoDMZvbJ_z3ni74PS6">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
