--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=http://myaye.top/xiugai?utm_medium=paid&utm_source=ig&utm_id=120225081235020090&utm_content=120225081235120090&utm_term=120225081235100090&utm_campaign=120225081235020090&fbclid=PAQ0xDSwKJTY1leHRuA2FlbQIxMAABpyIavrQNoIkojp2AG-zuP5SxYLZKvdtYM9PxAzHjeEY9ryG3z0s97NHdcQMY_aem_uBJIwtR7GYpdRhPuGSfpuA">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
