--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
+  <meta http-equiv="refresh" content="0;url=http://tatary.top/zuihaode?utm_medium=paid&utm_source=ig&utm_id=120224509101040291&utm_content=120224509101060291&utm_term=120224509101120291&utm_campaign=120224509101040291&fbclid=PAQ0xDSwKQ5FlleHRuA2FlbQIxMAABpxZvgNuF8ehwVxXQgXYsXWO03Qc1uU3OqbsMNNBZlmGqz8uFhq4VY5IwAbwy_aem_GP9oDkP0xFgHUrOLuR_zlA">
 </head>
 <body></body>
 </html>
