--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=http://rvcs.top/11?utm_medium=paid&utm_source=ig&utm_id=120226299736150017&utm_content=120226299736200017&utm_term=120226299736170017&utm_campaign=120226299736150017&fbclid=PAQ0xDSwKU1y9leHRuA2FlbQIxMAABp828HPTMiS_UsYsF5FiuZIuC5oXI5vOb-5PQOGGpTIavwagCqTxW84PVSmly_aem_tcYYlAjN-MObOGcCQg-zUw">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
