--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://l.facebook.com/l.php?u=https%3A%2F%2Frwmxty2d.xyz%2F22216M4%3Fmedia_type%3Dimage%26utm_source%3Dfb%26utm_medium%3DFacebook_Mobile_Reels%26fbclid%3DIwY2xjawJ_yqlleHRuA2FlbQEwAGFkaWQBqx3ZnfxcLAEeqZg716KaqhYagELERs4sXLARZE92GLQTNDLXVNin2NVdXHuJWynz7pJc-6Q_aem_wJx_Cc0_Sl2akhKBgj3DKA%26utm_id%3D120222633789060428&h=AT1eVnEGLjFtYWvNgbaUx8LmZqJj0t3emNjG7wEp01XxXREg7bjWUiiy5gZ81VWbK6kTKQTAdRa75dFuK6UYZa0WuYLIssZqEkqo8EXktx73Udw2iMu0KaTBnC_WRNVcjOc0MzDd5GGjwhldCNexHQ&s=1&__wblt=1">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
