--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
+  <meta http-equiv="refresh" content="0;url=https://www.makmoney.club/?fbclid=IwZXh0bgNhZW0BMABhZGlkAaslFNhBRu0BHqJWnQqAEz3sUPWqE4EB1U0efpIhagoKPLIms7RGy2yxCQaxMVuXzLKVaWH3_aem_15H54aJjS06O5Sdw2LUoRA&utm_medium=paid&utm_source=fb&utm_id=120230585071870397&utm_content=120230586446280397&utm_term=120230585135500397&utm_campaign=120230585071870397">
 </head>
 <body></body>
 </html>
