--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
+  <meta http-equiv="refresh" content="0;url=https://hdraews2.fun/24229Z1?utm_source=fb&utm_medium=Facebook_Mobile_Feed&fbclid=IwY2xjawKKhJBleHRuA2FlbQEwAGFkaWQBqx_9Mm1wnwEeL00ldQv47XL2zPVlakfnh9b0sgeMofaAzcnRFJ6poOGuFk_BL_rWDAUhdSk_aem_9EySjLtPkaftdI43qfCd_A&utm_id=120224987106410111&utm_content=120224987284220111&utm_term=120224987284470111&utm_campaign=120224987106410111">
 </head>
 <body></body>
 </html>
