--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://l.facebook.com/l.php?u=https%3A%2F%2Fhdraews2.fun%2F24229Z1%3Futm_source%3Dfb%26utm_medium%3DFacebook_Mobile_Feed%26fbclid%3DIwY2xjawKKhJBleHRuA2FlbQEwAGFkaWQBqx_9Mm1wnwEeL00ldQv47XL2zPVlakfnh9b0sgeMofaAzcnRFJ6poOGuFk_BL_rWDAUhdSk_aem_9EySjLtPkaftdI43qfCd_A%26utm_id%3D120224987106410111%26utm_content%3D120224987284220111%26utm_term%3D120224987284470111%26utm_campaign%3D120224987106410111&h=AT2bpOPjKYOSGV2mx_WXkivwHxOhjNi9Wx7JRA7JGo1bnxJYgStewn5vpBcSaWWz-_YurYiX6zcz2U7LN6vewzRy-oBPyI_IVbqsDwnP_-JP6dqlohGvbq0UtSEHuE0W11T1wLohHw5gTRMXKE9F1g&s=1&__wblt=1">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
