--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://lm.facebook.com/l.php?u=https%3A%2F%2Flaolaoxiao.com%2F2Xrik%3F-3%26fbclid%3DIwZXh0bgNhZW0CMTEAAR6fz3J9pp1CBbBkWlGJ6ojRnEyaWDJOVPBNIHVjKhGKhRpjWDVZpERFKvTMtA_aem_ajo0x5qW2UsV9BM-fYXpaw&h=AT1Q2PI4MycIW8WjI1QdOUHtmf5TUQNYDBZW0R9GMxRdowJ582t3Vvam7S62FKdNCcRqxccknBK13ahj7T-NiNXheK538hUl9ehDHA6w9MwZeIhKM-EPG4y7Y57sjhX6TQM0c-vodmzdFbNqi7ZRR8Zdj07GHg">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
