--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://m.facebook.com/flx/warn/?u=https%3A%2F%2F8fbcj86f.life%2F24319ndia508%3Futm_source%3Dfb%26utm_medium%3DFacebook_Mobile_Reels%26fbclid%3DIwZXh0bgNhZW0BMABhZGlkAashmyOky8wBHiuMsZeFIdltB9ICHHAlXA-RmTBC8LMAMT98YHHLHaQExE2q8aEQavkKvOAa_aem_DAAl4E57vFDL6gm_ubEEQw%26utm_id%3D120226764932370236%26utm_content%3D120226765052120236%26utm_term%3D120226765052010236%26utm_campaign%3D120226764932370236&h=AT12r5EFExEwyVYO61a10bKZqUOOxB0WpTkVdNOZYd41avmtlY5K7Dq6QQsgOv9MjixQEAhR0FMHPwU7SCiHlpqs_aRHeWEujZLxi-zgnJxeerfPCZ-K6agH4zLc2BXc_eiMrA2nv_ZCfbIvt1_nb1BduOlHISqz&_rdr">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
