--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
+  <meta http-equiv="refresh" content="0;url=https://ukhy8z92.today/23557LMO1?utm_source=ig&utm_medium=Instagram_Stories&utm_id=120225585890090276&utm_content=120225587763870276&utm_term=120225587762580276&utm_campaign=120225585890090276&fbclid=PAY2xjawK0lolleHRuA2FlbQEwAGFkaWQBqyCJbcWHVAGn-H2gujaOd9ZNUGhceFeIn45lQE_kcUHrrTKIRro1u6YHsHZzDTgWJHywxcg_aem_wZbYe6m6Cn3b9IlLzBmp2w">
 </head>
 <body></body>
 </html>
