--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://m.facebook.com/flx/warn/?u=https%3A%2F%2Fhdraews2.fun%2F24336C3%3Futm_source%3Dig%26utm_medium%3DInstagram_Reels%26utm_id%3D120224772613290743%26utm_content%3D120224772638670743%26utm_term%3D120224772637720743%26utm_campaign%3D120224772613290743%26fbclid%3DPAQ0xDSwK51S9leHRuA2FlbQEwAGFkaWQBqx_LSh8yVwGnjv8Jvd-5Q0BOazMc51lXrGjaVOgaVjtOPGykv_FqOTJFTQ_X0EGjZKNutZs_aem_2aiEvyIoo84I2aG1R0nhhg&h=AT1NdJv189NkP7y3I7L5k4yEMSMJyj6IO1Kbmv9PrY-HeiqZooJWvudLVCkhXfmRjayQEJoGrLUerX1Hp9jYbSO3hRxRAmBfjCaZhM_QLywB_e8rhyQqX6v6XgM-uVO-LlgtwWiWjqI-01N0_-bhOQ">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
