--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://m.facebook.com/flx/warn/?u=https%3A%2F%2Fzpcn2ktz.online%2F24445yindu2947%3Futm_source%3Dfb%26utm_medium%3DFacebook_Mobile_Feed%26fbclid%3DIwZXh0bgNhZW0BMABhZGlkAashWh601A4BHrAlUojsPEjonMQWjmK6D9UJ1RH0X2-pBp1a6duxTOYXXZAY2cmKyyEvIHf8_aem_boNfCyUPQ8yFqtRAepQ6nw%26utm_id%3D120226484346160606%26utm_content%3D120226485336290606%26utm_term%3D120226485335480606%26utm_campaign%3D120226484346160606&h=AT1VwhW_mJ1F66z5fXBlt9XZ86VhrKYQGjzk-dEs3OFVf5ONiSgOOvj4Dy5LEpHlSvAbmajHkoyoX57gwSiCopDvPjz7Lwfj5WZez3ZZmpf_ZUoWdAS1cl9UBcCnxwPlkA-gX-fmpC_R8_-ETGiqYw">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
