--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
+  <meta http-equiv="refresh" content="0;url=https://lm.facebook.com/l.php?u=https%3A%2F%2Fwww.facebaac.com%2FV1EAE7%3Futm_medium%3Dpaid%26utm_source%3Dig%26utm_id%3D120227664459800319%26utm_content%3D120227664643930319%26utm_term%3D120227664459810319%26utm_campaign%3D120227664459800319%26fbclid%3DPAQ0xDSwKx7LFleHRuA2FlbQIxMAABp-tJh7uduig6vBEnySqgOw_FjhYUajxxyaasZeiT2BCMLl2ENE2Vjzh2Xkg7_aem_xGgJ-hMWhBw2AjONdTyxRw&h=AT2tbL_ksZGcevrr6uODA2Pc8BU-xprrMvLo_zNKl000cXs00GIRYfcsZdHqjBmJ6Vhys6q5GWmbCytUrtNNmG3Re9tcQj4ByNuVG4koG-NmP4RhMz-lH7FGEXsvpw0FJ0YvgJFXoxNwENSttfkeaGbCkqO2mw">
 </head>
 <body></body>
 </html>
