--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://www.tyeymads55.top/html/link_manager/f5c7e1c7?utm_medium=paid&utm_source=fb&utm_id=120226631727360139&utm_content=120226631728380139&utm_term=120226631728710139&utm_campaign=120226631727360139">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
 </head>
 <body></body>
 </html>
