--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://ldyafr.com/ydnvdz/">
+  <meta http-equiv="refresh" content="0;url=https://ldyafr.com/ydnvdz/?fbclid=PAQ0xDSwLxMVdleHRuA2FlbQIxMAABp-QQQTtyy4sDL1rmjjrU85aCZNgOW21RsKpAKx11scoTsFJ-mdFXhiNMRKJw_aem_CuWRuTvXm8Ujm1TPeRd-Yw">
 </head>
 <body></body>
 </html>
