--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://t.me/+SC2I0l31_B84MjM1">
+  <meta http-equiv="refresh" content="0;url=https://www.lush4u.online/m/1058547022665426.html?utm_medium=paid&utm_source=ig&utm_id=120231194568480092&utm_content=120231194568920092&utm_term=120231194570130092&utm_campaign=120231194568480092&fbclid=PAQ0xDSwL5Hf5leHRuA2FlbQEwAGFkaWQBqyWjll_VrAGnJL9efiyuHK3pzraZ0KLPlfJ2C0hD66uDzC6YodDZR9wuVLqYuPAp-ua1xnA_aem_38eiRu5zkX_RmMKIS13G-g">
 </head>
 <body></body>
 </html>
